# ats_comments

./: Cargo.toml  READ.ME  atscomments.service  run.sh  startServer.sh  test.sh  test_sendmail.sh  vmSetup.sh
.github/workflows/: build.yml  rust.yml
src/: accounts.rs  db.rs  envvars.rs  functions.rs  main.rs  sendmail.rs  server.rs  types.rs
static/portrait/: mkwebp.sh
