[package]
name = "ats_comments"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
env_logger = "0.10.1"
log = "0.4.20"
rusqlite = { version = "0.29.0", features = ["bundled"] }
md-5 = "0.10.5"
chrono = "0.4.31"
actix-cors = "0.6.4"
actix-files = "0.6.4"
openssl = { version = "0.10.60", features = ["v110"] }
actix-web = { version = "4.4", features = ["openssl"] }

